--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                </button>
                </div>
     
-      <h1> Som vanligt, för liten agenda och för få instruktioner.
-     </h1>
+      <h1> Gallery </h1>
       <form>
         <fieldset>
               <legend>What are you looking for?</legend>
